Fixes: - Responsive problems: Buttons overlap the embed content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,7 +32,8 @@ md-progress-bar {
   width: 100%;
   height: 578.8px;
   margin: -288px 0 -145.8px;
-  min-width: 550px;
+  min-width: 670px;
+  box-sizing: border-box;
 }
 
 .search-box {
@@ -53,4 +54,10 @@ md-progress-bar {
   right: 10px;
   bottom: 10px;
   z-index: 1;
+}
+
+@media only screen and(max-width: 1210px) {
+  .tslint-embed {
+    padding-left: 130px;
+  }
 }
